@@ -82,6 +82,7 @@ System tools
     :toctree: autosummary
 
     do_with_timeout
+    get_url
     loadpickle
     progressbar
     query_yes_no
